--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   Speed: <input type="number" id="gameSpeed" value="5" min="1" max="9" step="1" />
   <input type="button" value="Start" id="gameStart" />
+  <input type="button" value="Manual Step" id="manualStep" />
   <br /> <br />
   <canvas id="gameArea"></canvas>
   <script src="app.js"></script>
